# 02-RFPilot-SFT-RAG-Chatbot

./: .dockerfile  .env.example  .gitattributes  .gitignore  Dockerfile  EDA_report.md  LICENSE  README.md  main.py  project_setting.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
chroma_db/: chroma.sqlite3
chroma_db/29e2b771-69ae-4fd1-9025-9dda88ce7e45/: index_metadata.pickle
data/: rag_chunks_final.csv
notebooks/: export_v2.py  llama.ipynb  train.py
src/embedding/: rag_data_processing.py
src/evaluation/: experiment_tracker.py  run_experiment.py
src/generator/: generator.py.old  generator_gguf.py  generator_lee.py
src/loader/: preprocess_pipeline.py
src/prompts/: dynamic_prompts.py  dynamic_prompts_jiyunpark.py
src/retriever/: main.py  retriever.py
src/router/: query_router.py  query_router_lee.py
src/utils/: config.py  conversation_manager.py
src/visualization/: chatbot_app.py  dimensionality_reduction.py  streamlit_app.py  vector_db_loader.py
